# clixon-examples

./: .gitignore  Makefile.in  README.md  configure  configure.ac
.github/workflows/: examples.yml  test.yml
3gpp/: Makefile.in  README.md
3gpp/docker/: Dockerfile  Makefile.in  README.md  startsystem.sh
3gpp/src/: 3gpp.xml  3gpp.xml.in  3gpp_cli.cli  Makefile.in
3gpp/yang/: Makefile.in  README.md  _3gpp-5g-common-yang-types@2019-10-20.yang  _3gpp-5gc-nrm-affunction@2019-10-28.yang  _3gpp-5gc-nrm-amffunction@2019-10-25.yang  _3gpp-5gc-nrm-amfregion@2019-10-28.yang  _3gpp-5gc-nrm-amfset@2019-10-28.yang  _3gpp-5gc-nrm-ausffunction@2019-10-25.yang  _3gpp-5gc-nrm-dnfunction@2019-10-28.yang  _3gpp-5gc-nrm-ep@2019-05-31.yang  _3gpp-5gc-nrm-ep@2019-11-18.yang  _3gpp-5gc-nrm-externalnrffunction@2019-10-28.yang  _3gpp-5gc-nrm-externalnssffunction@2019-10-28.yang  _3gpp-5gc-nrm-externalseppfunction@2019-11-17.yang  _3gpp-5gc-nrm-lmffunction@2019-10-25.yang  _3gpp-5gc-nrm-n3iwffunction@2019-10-28.yang  _3gpp-5gc-nrm-neffunction@2019-10-20.yang  _3gpp-5gc-nrm-nfprofile@2019-06-17.yang  _3gpp-5gc-nrm-nfservice@2019-06-17.yang  _3gpp-5gc-nrm-ngeirfunction@2019-10-25.yang  _3gpp-5gc-nrm-nrffunction@2019-10-28.yang  _3gpp-5gc-nrm-nssffunction@2019-10-25.yang  _3gpp-5gc-nrm-nwdaffunction@2019-10-25.yang  _3gpp-5gc-nrm-pcffunction@2019-10-25.yang  _3gpp-5gc-nrm-scpfunction@2019-10-20.yang  _3gpp-5gc-nrm-seppfunction@2019-05-15.yang  _3gpp-5gc-nrm-seppfunction@2019-11-17.yang  _3gpp-5gc-nrm-smffunction@2019-10-25.yang  _3gpp-5gc-nrm-smsffunction@2019-10-25.yang  _3gpp-5gc-nrm-udmfunction@2019-10-25.yang  _3gpp-5gc-nrm-udrfunction@2019-10-25.yang  _3gpp-5gc-nrm-udsffunction@2019-10-25.yang  _3gpp-5gc-nrm-upffunction@2019-10-25.yang  _3gpp-common-ep-rp@2019-06-17.yang  _3gpp-common-managed-element@2019-06-17.yang  _3gpp-common-managed-function@2019-11-21.yang  _3gpp-common-measurements@2019-11-21.yang  _3gpp-common-subnetwork@2019-06-17.yang  _3gpp-common-subscription-control@2019-11-29.yang  _3gpp-common-top@2019-06-17.yang  (+29 more)
hello/: Makefile.in  README.md
hello/docker/: Dockerfile  Makefile  Makefile.in  README.md  startsystem.sh
hello/src/: Makefile.in  README.md  autocli.xml  clixon-hello@2019-04-17.yang  clixon-hello@2024-05-25.yang  hello.xml  hello.xml.in  hello_backend_plugin.c
hello/yang/: Makefile.in
helloworld/docker/: Dockerfile  Makefile  README.md
helloworld/host/: clixon-hello@2019-04-17.yang
nrm/: README.md
nrm/docker/: Dockerfile  Makefile  README.md  startsystem.sh
nrm/src/: Makefile.in  nrm.xml  nrm_cli.cli
nrm/yang/:  ngran-gNBDUFunction@2018-08-02.yang  EP_RP@2018-07-31.yang  Makefile.in  ManagedElement@2018-07-31.yang  ManagedFunction@2018-07-31.yang  ManagementNode@2018-12-18.yang  MeContext@2018-12-18.yang  NFProfile@2018-08-08.yang  SubNetwork@2018-07-31.yang  Top@2018-07-31.yang  VsDataContainer@2018-12-18.yang  ngc-AMFFunction@2018-08-07.yang  ngc-AMFRegion@2018-12-18.yang  ngc-AMFSet@2018-12-18.yang  ngc-AUSFFunction@2018-08-07.yang  ngc-LMFFunction@2018-12-18.yang  ngc-N3IWFFunction@2018-08-07.yang  ngc-NGEIRFunction@2018-08-07.yang  ngc-NRFFunction@2018-08-07.yang  ngc-NSSFFunction@2018-08-07.yang  ngc-NWDAFunction@2018-08-07.yang  ngc-PCFFunction@2018-08-07.yang  ngc-SEPPFunction@2018-08-07.yang  ngc-SMFFunction@2018-08-07.yang  ngc-SMSFFunction@2018-08-07.yang  ngc-UDMFunction@2018-08-07.yang  ngc-UDRFunction@2018-08-07.yang  ngc-UDSFFunction@2018-08-07.yang  ngc-UPFFunction@2018-08-07.yang  ngc@2018-08-07.yang  ngran-bWP@2018-09-28.yang  ngran-gNBCUCPFunction@2018-08-02.yang  ngran-gNBCUUPFunction@2018-08-02.yang  ngran-nRCellCU@2018-08-02.yang  ngran-nRCellDU@2018-08-02.yang  ngran-nRSectorCarrier@2018-08-02.yang  ngran@2018-07-27.yang  nrm-types-3gpp@2018-07-31.yang
openconfig/: Makefile.in  README.md
openconfig/docker/: Dockerfile  Makefile  Makefile.in  README.md  startsystem.sh
openconfig/src/: Makefile.in  autocli.xml  openconfig.xml  openconfig.xml.in  openconfig_cli.cli  restconf.xml  sshd_config
openconfig/yang/: Makefile.in
wifi/: Makefile.in  README.md
wifi/docker/: Dockerfile  Makefile.in  README.md  startsystem.sh
wifi/src/: Makefile.in  README.md  autocli.xml  clixon-wifi@2021-06-22.yang  startup_db  wifi.xml  wifi.xml.in  wifi_backend_plugin.c  wifi_cli.cli
wifi/yang/: Makefile.in
